--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -5,44 +5,163 @@
   align-items: center;
   min-height: 91px;
   background-color: #f6f7ff;
+
+  @media (max-width: 1023px) {
+    min-height: 69px;
+  }
+
+  @media (max-width: 767px) {
+    min-height: 48px;
+  }
 }
 
 .wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  min-width: 768px;
+  align-items: center;
+  width: 100%;
   max-width: 1366px;
   padding: 0 97px;
-  
-  @media (max-width: 1366px) {
-    padding: 0 30px;
+
+  @media (max-width: 1300px) {
+    padding: 0 45px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0 15px;
+    justify-content: flex-start;
+
+    &_menu_open {
+      position: relative;
+      height: 100%;
+      align-items: flex-start;
+      padding-top: 20px;
+      z-index: 100;
+      overflow-y: hidden;
+    }
+  }
+}
+
+.button_menu {
+  display: none;
+
+  @media (max-width: 767px) {
+    display: block;
+    width: 16px;
+    height: 12px;
+    border: none;
+    margin-right: 11px;
+    background-image: url('../../assets/images/mobile-menu.svg');
+    background-repeat: no-repeat;
   }
 }
 
 .nav {
   min-width: 732px;
+  padding-left: 50px;
+
+  @media (max-width: 1300px) {
+    min-width: 450px;
+    margin-right: 30px;
+    padding-left: 47px;
+  }
+
+  @media (max-width: 767px) {
+    display: none;
+    padding-left: 0;
+    min-width: 290px;
+    margin-right: 0;
+
+    &_menu_open {
+      display: flex;
+    }
+  }
 }
 
-.login {
-  padding-top: 10px;
+.button_wrapper {
+  position: relative;
+
+  &_menu_open {
+    width: 100%;
+  }
 }
 
 .link {
   position: relative;
+  display: block;
   transition: opacity 0.25s ease-out;
-  
+
+  @media (max-width: 1023px) {
+    font-size: 0;
+    width: 20px;
+  }
+
   &:hover {
     opacity: 0.5;
   }
-  
+
   &::before {
     content: '';
     position: absolute;
-    top: -1px;
-    left: -30px;
+    top: -2px;
+    left: -32px;
     width: 20px;
     height: 22px;
+    background-image: url('../../assets/images/icon-login.svg');
     background-repeat: no-repeat;
+
+    @media (max-width: 1023px) {
+      top: -10px;
+      left: 0;
+    }
+
+    @media (max-width: 767px) {
+      width: 14px;
+      height: 16px;
+      top: -7px;
+      left: 8px;
+      background-size: contain;
+    }
+  }
+
+  @media (max-width: 767px) {
+
+    &_menu_open {
+      margin-bottom: 100vh;
+      font-size: 16px;
+      width: 100%;
+      padding-left: 45px;
+      border-top: 1px solid #c1c2ca;
+      border-bottom: 1px solid #c1c2ca;
+      height: 60px;
+      padding-top: 20px;
+
+      &::before {
+        width: 20px;
+        height: 22px;
+        top: 18px;
+        left: 15px;
+      }
+    }
+  }
+}
+
+.button_close {
+  display: none;
+
+  @media (max-width: 767px) {
+    position: absolute;
+    background-image: url('../../assets/images/button-close.svg');
+    background-repeat: no-repeat;
+    border: none;
+    width: 15px;
+    height: 15px;
+    top: -305px;
+    left: 275px;
+
+    &_menu_open {
+      display: block;
+    }
   }
 }
