--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -1,9 +1,20 @@
 .logo {
-  dispaly: block;
   padding-bottom: 11px;
-  transition: opacity 0.25s ease-out;
-  
-  &:hover {
-    opacity: 0.5;
+
+  @media (max-width: 1023px) {
+    width: 133px;
+    height: 22px;
+  }
+
+  @media (max-width: 767px) {
+    width: 118px;
+    height: 25px;
+    margin-right: 38vw;
+    padding-bottom: 0;
+
+    &_menu_open {
+      margin-top: -9px;
+      margin-bottom: 27px;
+    }
   }
 }
