--- a/src/components/site-menu/site-menu.module.scss
+++ b/src/components/site-menu/site-menu.module.scss
@@ -1,16 +1,45 @@
 .list {
-  padding-top: 10px;
   display: flex;
   flex-wrap: wrap;
+
+  @media (max-width: 1023px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+    width: 100%;
+
+    &_menu_open {
+      flex-direction: column;
+      align-items: stretch;
+      margin-bottom: 0;
+    }
+  }
 }
 
-.list-item {
+.list_item {
   transition: opacity 0.25s ease-out;
-  
+
+  @media (max-width: 767px) {
+    height: 60px;
+    border-top: 1px solid #c1c2ca;
+    padding-top: 20px;
+    padding-left: 15px;
+  }
+
   &:not(:last-child) {
     margin-right: 25px;
+
+    @media (max-width: 1023px) {
+      margin-right: 20px;
+    }
+
+    @media (max-width: 767px) {
+      margin-right: 0;
+    }
   }
-  
+
   &:hover {
     opacity: 0.5;
   }
