--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -2,13 +2,14 @@
   height: 400px;
   display: flex;
   justify-content: center;
+  width: 1366px;
 }
 
 .wrapper {
-  display: flex:
+  display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  width: 100%;
+  max-width: 1366px;
 }
