--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -8,7 +8,7 @@
   }
   
   &_cards {
-    background-color: #2c36f2
+    background-color: #2c36f2;
     
     @media (max-width: 767px) {
       background-image: url('../../assets/images/mobile-slider-card.jpg');
