--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -101,7 +101,7 @@
   font-size: 18px;
   font-weight: 500;
   border-radius: 4px;
-  min_height: 53px;
+  min-height: 53px;
   background-color: #2c36f2;
   color: #f6f7ff;
   
