--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -10,38 +10,54 @@
   &_cards {
     background-color: #2c36f2;
     
+    @media (max-width: 1023px) {
+      background-image: url('../../assets/images/tablet-slider-card.jpg');
+      background-size: contain;
+      background-position: right;
+    }
+    
     @media (max-width: 767px) {
       background-image: url('../../assets/images/mobile-slider-card.jpg');
-      background-size: cover;
-      background-position: right;
     }
   }
   
   &_man {
+    background-color: #dcdcdc;
+    
+    @media (max-width: 1023px) {
+      background-image: url('../../assets/images/tablet-slider-man.jpg');
+      background-size: contain;
+      background-position: right;
+    }
     
     @media (max-width: 767px) {
       background-image: url('../../assets/images/mobile-slider-man.jpg');
-      background-size: cover;
-      background-position: right;
     }
   }
   
   &_girl {
+    background-color: #87cefa;
+    
+    @media (max-width: 1023px) {
+      background-image: url('../../assets/images/tablet-slider-girl.jpg');
+      background-size: contain;
+      background-position: right;
+    }
     
     @media (max-width: 767px) {
       background-image: url('../../assets/images/mobile-slider-girl.jpg');
-      background-size: cover;
-      background-position: right;
     }
   }
 }
 
 :global(.swiper-pagination-bullet) {
   background-color: #2028b6;
+  opacity: 1;
 }
 
 :global(.swiper-pagination-bullet-active) {
   background-color: #f6f7ff;
+  opacity: 1;
 }
 
 .wrapper {
@@ -104,6 +120,7 @@
   min-height: 53px;
   background-color: #2c36f2;
   color: #f6f7ff;
+  padding: 20px 30px;
   
   @media (max-width: 1023px) {
     min-width: 206px;
