--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -11,8 +11,8 @@
     background-color: #2c36f2;
     
     @media (max-width: 1023px) {
-      background-image: url('../../assets/images/tablet-slider-cards.jpg');
-      background-size: contain;
+      background-image: url('../../assets/images/tablet-slider-cards.png');
+      background-size: contain;#87CEFA
       background-position: right;
     }
     
