--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -12,7 +12,7 @@
     
     @media (max-width: 1023px) {
       background-image: url('../../assets/images/tablet-slider-cards.png');
-      background-size: contain;#87CEFA
+      background-size: contain;
       background-position: right;
     }
     
