--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -2,6 +2,7 @@
   height: 400px;
   display: flex;
   justify-content: center;
+  background-repeat: no-repeat;
   
   @media (max-width: 767px) {
     height: 228px;
