--- a/src/components/calculator/calculator.module.scss
+++ b/src/components/calculator/calculator.module.scss
@@ -1,32 +1,68 @@
 .form {
   display: flex;
+  max-width: 1366px;
+  width: 100%;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  width: 100%;
+  margin-right: 70px;
+}
+
+.wrapper_select {
+  max-width: 600px;
+}
+
+.wrapper_parameters {
+  max-width: 600px;
 }
 
 .wrapper_price {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .label {
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .input {
   text-align: center;
+  min-height: 60px;
+  margin-bottom: 5px;
 }
 
 .price_control_button {
   position: absolute;
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  border: none;
+  background-position: center;
+  background-color: transparent;
+  background-size: contain;
 
   &_minus {
-    top: 25px;
-    left: 0;
+    top: 40px;
+    left: 10px;
+    background-image: url('../../assets/images/minus.svg');
   }
 
   &_plus {
-    top: 25px;
-    right: 0;
+    top: 40px;
+    right: 10px;
+    background-image: url('../../assets/images/plus.svg');
   }
+}
+
+.wrapper_checkbox {
+  display: flex;
+  flex-direction: column;
 }
