--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -3,3 +3,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.wrapper {
+  max-width: 1366px;
+  width: 100%;
+  padding: 0 98px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
