--- a/src/components/checkbox/checkbox.module.scss
+++ b/src/components/checkbox/checkbox.module.scss
@@ -1,3 +1,17 @@
 .label {
-  margin-bottom: 10px;
+  padding-bottom: 5px;
+}
+
+.input {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.span {
+  padding-left: 5px;
 }
