--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -7,8 +7,13 @@
 .wrapper {
   max-width: 1366px;
   width: 100%;
-  padding: 0 98px;
+  padding: 8px 98px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.heading {
+  font-size: 41px;
+  font-weight: 700;
 }
