--- a/src/components/offer/offer.module.scss
+++ b/src/components/offer/offer.module.scss
@@ -1,16 +1,69 @@
 .wrapper {
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   height: 389px;
+  background-color: #f6f7ff;
+  padding: 60px 58px;
+}
+
+.error_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.text_error {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 140%;
+  margin-bottom: 6px;
+}
+
+.text_hint {
+  margin-top: 5px;
+  color: #394959;
+  line-height: 140%;
+}
+
+.heading {
+  font-size: 22px;
+  font-weight: 500;
 }
 
 .inner_wrapper {
+  padding-top: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1.2fr 1fr;
   grid-template-rows: 1fr 1fr;
+  grid-column-gap: 40px;
+  grid-row-gap: 31px;
+  margin-bottom: 36px;
 }
 
 .span_wrapper {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+
+.value {
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+
+.label {
+  color: #394959;
+}
+
+.button {
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #f6f7ff;
+  min-height: 51px;
+  min-width: 382px;
+  background-color: #2c36f2;
+  border-radius: 4px;
+  text-align: center;
+  border: none;
 }
