--- a/src/components/range/range.module.scss
+++ b/src/components/range/range.module.scss
@@ -1,9 +1,55 @@
+.wrapper {
+  margin-bottom: 9px;
+}
+
 .input {
+  -webkit-appearance: none;
+  margin: 15px 0 13px;
   max-width: 600px;
   width: 100%;
+
+  &:focus {
+    outline: none;
+  }
+
+  &::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 1px;
+    background: #c1c2ca;
+  }
+
+  &::-webkit-slider-thumb {
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    background: #2c36f2;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+  }
+
+  &::-moz-range-track {
+    width: 100%;
+    height: 1px;
+    background: #c1c2ca;
+  }
+
+  &::-moz-range-thumb {
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    background: #2c36f2;
+    cursor: pointer;
+  }
 }
 
 .span_wrapper {
   display: flex;
   justify-content: space-between;
 }
+
+.span {
+  font-size: 14px;
+  color: #707C87;
+}
+
