--- a/src/components/offer/offer.module.scss
+++ b/src/components/offer/offer.module.scss
@@ -4,6 +4,17 @@
   height: 389px;
   background-color: #f6f7ff;
   padding: 60px 58px;
+  
+  @media (max-width: 1023px) {
+    max-width: 678px;
+    padding: 45px;
+  }
+  
+  @media (max-width: 767px) {
+    min-width: 290px;
+    min-hieght: 433px;
+    padding: 30px 15px;
+  }
 }
 
 .error_wrapper {
@@ -16,6 +27,10 @@
   font-weight: 500;
   line-height: 140%;
   margin-bottom: 6px;
+  
+  @media (max-width: 767px) {
+    font-size: 18px;
+  }
 }
 
 .text_hint {
@@ -27,6 +42,10 @@
 .heading {
   font-size: 22px;
   font-weight: 500;
+  
+  @media (max-width: 767px) {
+    font-size: 18px;
+  }
 }
 
 .inner_wrapper {
@@ -37,6 +56,12 @@
   grid-column-gap: 40px;
   grid-row-gap: 31px;
   margin-bottom: 36px;
+  
+  @media (max-width: 767px) {
+    grid-templtale-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 15px;
+  }
 }
 
 .span_wrapper {
@@ -49,6 +74,10 @@
   font-size: 22px;
   font-weight: 500;
   margin-bottom: 6px;
+  
+  @media (max-width: 767px) {
+    font-size: 18px;
+  }
 }
 
 .label {
@@ -66,4 +95,13 @@
   border-radius: 4px;
   text-align: center;
   border: none;
+  
+  @media (max-width: 1023px) {
+    min-width: 558px;
+  }
+  
+  @media (max-width: 767px) {
+    min-width: 260px;
+    font-size: 14px;
+  }
 }
