--- a/src/components/select/select.module.scss
+++ b/src/components/select/select.module.scss
@@ -15,6 +15,10 @@
   padding-left: 22px;
   padding-top: 5px;
   font-size: 16px;
+  
+  @media (max-width: 767px) {
+    padding-left: 10px;
+  }
 
   &::before {
     content: '';
@@ -45,8 +49,19 @@
 }
 
 .list_item {
-  min-height: 60px;
+  
   &:not(:last-child) {
     border-bottom: 1px solid #c1c2ca;
+  }
+}
+
+.input {
+  text-align: left;
+  padding-top: 5px;
+  padding-left: 22px;
+  min-height: 60px;
+  
+  @media (max-width: 767px) {
+    padding-left: 10px;
   }
 }
