--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -11,9 +11,25 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  
+  @media (max-width: 1023px) {
+    padding: 8px 45px;
+  }
+  
+  @media (max-width: 767px) {
+    padding: 8px 15px;
+  }
 }
 
 .heading {
   font-size: 41px;
   font-weight: 700;
+  
+  @media (max-width: 1023px) {
+    font-size: 32px;
+  }
+  
+  @media (max-width: 767px) {
+    font-size: 22px;
+  }
 }
