--- a/src/components/calculator/calculator.module.scss
+++ b/src/components/calculator/calculator.module.scss
@@ -15,6 +15,10 @@
   max-width: 600px;
   width: 100%;
   margin-right: 70px;
+  
+  @media (max-width: 1023px {
+    margin-right: 0;
+  }
 }
 
 .wrapper_select {
