--- a/src/components/offer/offer.module.scss
+++ b/src/components/offer/offer.module.scss
@@ -57,6 +57,10 @@
   grid-row-gap: 31px;
   margin-bottom: 36px;
   
+  @media (max-width: 1023px) {
+    margin-bottom: 20px;
+  }
+  
   @media (max-width: 767px) {
     grid-templtale-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
