--- a/src/components/calculator/calculator.module.scss
+++ b/src/components/calculator/calculator.module.scss
@@ -16,7 +16,7 @@
   width: 100%;
   margin-right: 70px;
   
-  @media (max-width: 1023px {
+  @media (max-width: 1023px) {
     margin-right: 0;
   }
 }
