--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -11,25 +11,27 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  
+
   @media (max-width: 1023px) {
-    padding: 8px 45px;
+    padding: 45px;
   }
-  
+
   @media (max-width: 767px) {
-    padding: 8px 15px;
+    padding: 38px 15px;
   }
 }
 
 .heading {
   font-size: 41px;
   font-weight: 700;
-  
+
   @media (max-width: 1023px) {
     font-size: 32px;
+    margin-bottom: 18px;
   }
-  
+
   @media (max-width: 767px) {
     font-size: 22px;
+    margin-bottom: 10px;
   }
 }
