--- a/src/components/range/range.module.scss
+++ b/src/components/range/range.module.scss
@@ -8,6 +8,10 @@
   max-width: 600px;
   width: 100%;
 
+  @media (max-width: 1023px) {
+    max-width: 678px;
+  }
+
   &:focus {
     outline: none;
   }
