--- a/src/components/map/map.module.scss
+++ b/src/components/map/map.module.scss
@@ -7,31 +7,41 @@
 .wrapper {
   max-width: 1366px;
   width: 100%;
-  padding: 8px 98px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  padding: 26px 98px;
 
   @media (max-width: 1023px) {
-    padding: 45px 45px 0;
+    padding: 0 45px 26px;
   }
 
   @media (max-width: 767px) {
-    padding: 38px 15px 0;
+    padding: 0 0 26px;
   }
 }
 
 .heading {
   font-size: 41px;
   font-weight: 700;
+  margin-bottom: 61px;
 
   @media (max-width: 1023px) {
     font-size: 32px;
-    margin-bottom: 18px;
+    margin-top: 0;
+    margin-bottom: 36px;
   }
 
   @media (max-width: 767px) {
     font-size: 22px;
-    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-bottom: 31px;
+  }
+}
+
+.map {
+  height: 462px;
+  max-width: 1170px;
+  width: 100%;
+
+  @media (max-width: 767px) {
+    height: 381px;
   }
 }
