Добавит форму оформления заявки WIP

--- a/src/components/offer/offer.module.scss
+++ b/src/components/offer/offer.module.scss
@@ -4,6 +4,7 @@
   height: 389px;
   background-color: #f6f7ff;
   padding: 60px 58px;
+  border-radius: 4px;
 
   @media (max-width: 1023px) {
     max-width: 678px;
