--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -23,7 +23,7 @@
 
 .overlay {
   background-color: rgba(88, 87, 87, 0.6);
-  z-index: 10;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
@@ -56,15 +56,18 @@
 .button_close {
   background-image: url('../../assets/images/button-close.svg');
   background-repeat: no-repeat;
-  width: 17px;
-  height: 17px;
+  width: 20px;
+  height: 20px;
   border: none;
-  cursor: pointer;
   background-color: transparent;
-  background-size: contain;
+  background-size: 17px;
 
   @media (max-width: 767px) {
     margin-right: -4px;
+  }
+  
+  &:hover {
+    cursor: pointer;
   }
 }
 
