--- a/src/components/calculator/calculator.module.scss
+++ b/src/components/calculator/calculator.module.scss
@@ -141,6 +141,12 @@
   background-color: transparent;
   background-size: 16px;
   padding: 0;
+  transition: opacity 0.25s ease-out;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.5;
+  }
 
   &_minus {
     left: 15px;
