--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -10,7 +10,7 @@
   padding: 8px 98px 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 
   @media (max-width: 1023px) {
     padding: 45px 45px 0;
@@ -28,6 +28,7 @@
   @media (max-width: 1023px) {
     font-size: 32px;
     margin-bottom: 18px;
+    align-self: flex-start;
   }
 
   @media (max-width: 767px) {
