--- a/src/components/select/select.module.scss
+++ b/src/components/select/select.module.scss
@@ -44,6 +44,10 @@
       transform: rotate(180deg);
     }
   }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .list {
@@ -79,4 +83,7 @@
     padding-left: 13px;
   }
 
+  &:hover {
+    cursor: pointer;
+  }
 }
