--- a/src/components/services/services.module.scss
+++ b/src/components/services/services.module.scss
@@ -306,6 +306,7 @@
   text-align: center;
   border-radius: 4px;
   border: none;
+  transition: background-color 0.25s ease-out;
 
   @media (max-width: 1023px) {
     min-height: 48px;
@@ -318,6 +319,11 @@
     min-width: 290px;
     width: 100%;
     padding-bottom: 10px;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: darken(#2c36f2, 10);
   }
 }
 
@@ -338,4 +344,9 @@
 .link_in_text {
   text-decoration-line: underline;
   font-weight: 500;
+  transition: opacity 0.25s ease-out;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
