--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -7,7 +7,7 @@
 .wrapper {
   max-width: 1366px;
   width: 100%;
-  padding: 8px 98px 0;
+  padding: 8px 98px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,11 +24,11 @@
 .heading {
   font-size: 41px;
   font-weight: 700;
+  align-self: flex-start;
 
   @media (max-width: 1023px) {
     font-size: 32px;
     margin-bottom: 18px;
-    align-self: flex-start;
   }
 
   @media (max-width: 767px) {
