--- a/src/components/credit/credit.module.scss
+++ b/src/components/credit/credit.module.scss
@@ -13,11 +13,11 @@
   align-items: center;
 
   @media (max-width: 1023px) {
-    padding: 45px 45px 0;
+    padding: 45px 45px 30px;
   }
 
   @media (max-width: 767px) {
-    padding: 38px 15px 0;
+    padding: 38px 15px 30px;
   }
 }
 
