--- a/src/components/application/application.module.scss
+++ b/src/components/application/application.module.scss
@@ -16,12 +16,13 @@
     background-color: #ffffff;
     margin-top: 0;
     margin-bottom: 0;
-    padding: 4px 0 74px;
+    padding: 4px 0 44px;
     min-height: 600px;
+    max-width: unset;
   }
 
   @media (max-width: 767px) {
-    padding: 11px 0 58px;
+    padding: 9px 0 27px;
   }
 }
 
@@ -33,6 +34,7 @@
   @media (max-width: 1023px) {
     font-size: 18px;
     margin-bottom: 30px;
+    margin-top: 10px;
   }
 
   @media (max-width: 767px) {
@@ -100,6 +102,8 @@
   @media (max-width: 767px) {
     font-size: 16px;
     margin-bottom: 20px;
+    padding-left: 14px;
+    padding-top: 2px;
   }
 
   &::placeholder {
