--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -17,20 +17,26 @@
 
 .wrapper {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   max-width: 1366px;
-  padding: 0 97px;
+  padding: 0 96px;
 
-  @media (max-width: 1300px) {
+  @media (max-width: 1150px) {
+    max-width: 1150px;
+    padding: 0 40px;
+  }
+
+  @media (max-width: 1023px) {
+    justify-content: space-between;
     padding: 0 45px;
   }
 
   @media (max-width: 767px) {
     padding: 0 15px;
     justify-content: flex-start;
+    flex-wrap: wrap;
 
     &_menu_open {
       position: relative;
@@ -59,13 +65,17 @@
 }
 
 .nav {
-  min-width: 732px;
-  padding-left: 50px;
+  min-width: 474px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10px;
+  padding-right: 10px;
 
-  @media (max-width: 1300px) {
-    min-width: 450px;
-    margin-right: 30px;
-    padding-left: 47px;
+  @media (max-width: 1023px) {
+    min-width: unset;
+    flex-grow: 0;
+    padding: 0;
   }
 
   @media (max-width: 767px) {
@@ -76,6 +86,7 @@
 
     &_menu_open {
       display: flex;
+      justify-content: stretch;
       width: 100%;
     }
   }
@@ -83,6 +94,11 @@
 
 .button_wrapper {
   position: relative;
+  min-width: 200px;
+
+  @media (max-width: 1023px) {
+    min-width: unset;
+  }
 
   @media (max-width: 767px) {
     position: static;
@@ -98,10 +114,12 @@
   position: relative;
   display: block;
   transition: opacity 0.25s ease-out;
+  padding-left: 26px;
 
   @media (max-width: 1023px) {
     font-size: 0;
     width: 20px;
+    padding-left: 0;
   }
 
   @media (max-width: 767px) {
@@ -117,14 +135,14 @@
     content: '';
     position: absolute;
     top: -2px;
-    left: -32px;
+    left: -4px;
     width: 20px;
     height: 22px;
     background-image: url('../../assets/images/icon-login.svg');
     background-repeat: no-repeat;
 
     @media (max-width: 1023px) {
-      top: -10px;
+      top: -11px;
       left: 0;
     }
 
@@ -171,13 +189,13 @@
       position: absolute;
       background-image: url('../../assets/images/button-close.svg');
       background-repeat: no-repeat;
+      background-size: 15px;
       border: none;
-      width: 15px;
-      height: 15px;
-      top: -304px;
-      right: -1px;
+      width: 20px;
+      height: 20px;
+      top: 15px;
+      right: 9px;
       background-color: transparent;
-      background-size: contain;
     }
   }
 }
