--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -1,12 +1,18 @@
 .logo {
+  min-width: 149px;
+  min-height: 25px;
   padding-bottom: 11px;
 
   @media (max-width: 1023px) {
+    min-width: 133px;
+    min-height: 22px;
     width: 133px;
     height: 22px;
   }
 
   @media (max-width: 767px) {
+    min-width: 118px;
+    min-height: 25px;
     width: 118px;
     height: 25px;
     padding-bottom: 0;
@@ -17,3 +23,18 @@
     }
   }
 }
+
+//.img {
+//  width: 149px;
+//  height: 25px;
+//
+//  @media (max-width: 1023px) {
+//    width: 133px;
+//    height: 22px;
+//  }
+//
+//  @media (max-width: 767px) {
+//    width: 118px;
+//    height: 25px;
+//  }
+//}
