--- a/src/components/site-menu/site-menu.module.scss
+++ b/src/components/site-menu/site-menu.module.scss
@@ -1,18 +1,25 @@
 .list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 100px;
 
   @media (max-width: 1023px) {
     font-size: 14px;
+    padding-left: 15px;
+    padding-top: 2px;
   }
 
   @media (max-width: 767px) {
     font-size: 16px;
     width: 100%;
+    padding-left: 0;
+    padding-top: 0;
 
     &_menu_open {
       flex-direction: column;
       align-items: stretch;
+      justify-content: stretch;
       margin-bottom: 0;
     }
   }
