--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -44,7 +44,7 @@
       align-items: flex-start;
       padding-top: 20px;
       z-index: 10;
-      overflow-x: hidden;
+      overflow-x: scroll;
     }
   }
 }
