--- a/src/components/socials/socials.module.scss
+++ b/src/components/socials/socials.module.scss
@@ -1,7 +1,8 @@
 .list {
   display: flex;
+  flex-wrap: wrap;
   min-width: 100px;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-top: 13px;
 
@@ -13,8 +14,10 @@
 .list_item {
   transition: opacity 0.25s ease-out;
 
-  @media (max-width: 1023px) {
-    &:not(:last-child) {
+  &:not(:last-child) {
+    margin-right: 15px;
+
+    @media (max-width: 1023px) {
       margin-right: 20px;
     }
   }
