--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -40,11 +40,12 @@
 
     &_menu_open {
       position: relative;
-      height: 100%;
+      height: 100vh;
       align-items: flex-start;
       padding-top: 20px;
       z-index: 10;
-      overflow-x: scroll;
+      min-height: 100%;
+      overflow-y: scroll;
     }
   }
 }
@@ -158,7 +159,7 @@
   &_menu_open {
 
     @media (max-width: 767px) {
-      margin-bottom: 100vh;
+      margin-bottom: 40vh;
       font-size: 16px;
       width: 100%;
       padding-left: 45px;
