--- a/src/components/calculator/calculator.module.scss
+++ b/src/components/calculator/calculator.module.scss
@@ -124,6 +124,7 @@
   font-weight: 500;
   color: #1f1e25;
   font-family: 'Roboto', Arial, sans-serif;
+  border: 1px solid #1f1e25;
 
   @media (max-width: 1023px) {
     font-size: 16px;
